2013-05-03  Jesse  <>

	* GREATLib.csproj:
	* StickmanChampion.cs:
	* StickmanChampion.cs: 

2013-04-30  Jesse  <>

	* GREATLib.csproj:
	* IChampion.cs:
	* ChampionTypes.cs:
	* StickmanChampion.cs: 

2013-04-30  Jesse  <>

	* TileMap.cs:
	* PhysicsSystem.cs:
	* PhysicsEntity.cs:
	* CollisionHandler.cs:
	* StickmanChampion.cs: 

2013-04-17  Jesse  <>

	* GameMatch.cs:
	* PhysicsSystem.cs:
	* PhysicsEntity.cs:
	* CollisionHandler.cs: 

2013-04-17  Jesse  <>

	* PhysicsSystem.cs: 

2013-04-17  Jesse  <>

	* Rect.cs:
	* GameMatch.cs:
	* GREATLib.csproj:
	* GameWorld.cs:
	* Tile.cs:
	* IEntity.cs:
	* TileMap.cs:
	* CollisionType.cs:
	* TileCollision.cs:
	* PhysicsEntity.cs:
	* PhysicsSystem.cs:
	* CollisionHandler.cs:
	* StickmanChampion.cs: 

2013-04-16  Jesse  <>

	* GameMatch.cs:
	* GREATLib.csproj:
	* ISynchronizable.cs:
	* IEntity.cs:
	* EntityIDGenerator.cs:
	* PhysicsSystem.cs:
	* CollisionHandler.cs: 

2013-04-16  Jesse  <>

	* GameMatch.cs:
	* GREATLib.csproj:
	* GameWorld.cs:
	* Player.cs:
	* IChampion.cs:
	* StickmanChampion.cs: 

2013-04-15  Jesse  <>

	* GREATLib.csproj:
	* Tile.cs:
	* TileMap.cs:
	* TileCollision.cs: 

2013-04-12  Jesse  <>

	* GREATLib.csproj:
	* PhysicsEntity.cs:
	* PhysicsSystem.cs:
	* HorizontalDirection.cs: 

2013-03-30  Jesse  <>

	* Player.cs:
	* Physics.cs:
	* GREATLib.csproj:
	* ISynchronizable.cs:
	* IEntity.cs:
	* Player.cs:
	* PhysicsEntity.cs:
	* IChampion.cs:
	* StickmanChampion.cs: 

2013-03-28  Jesse  <>

	* Player.cs:
	* Physics.cs:
	* Direction.cs:
	* TileId.cs:
	* TileMap.cs:
	* GREATLib.csproj:
	* ClientMessage.cs:
	* ServerMessage.cs:
	* PlayerAnimation.cs:
	* Champion.cs:
	* ChampionTypes.cs:
	* AnimationInfo.cs:
	* StickmanChampion.cs: 

2013-03-20  Jesse  <${AuthorEmail}>

	* Physics.cs:
	* TileId.cs:
	* TileMap.cs:
	* GREATLib.csproj:
	* GeneralHelper.cs:
	* Champion.cs:
	* StickmanChampion.cs: 

2013-03-19  Jesse  <${AuthorEmail}>

	* Player.cs:
	* Physics.cs:
	* GREATLib.csproj:
	* Champion.cs: