@@ -1,0 +1,41 @@
+//
+//  ISpell.cs
+//
+//  Author:
+//       Jesse <>
+//
+//  Copyright (c) 2013 Jesse
+//
+//  This program is free software: you can redistribute it and/or modify
+//  it under the terms of the GNU General Public License as published by
+//  the Free Software Foundation, either version 3 of the License, or
+//  (at your option) any later version.
+//
+//  This program is distributed in the hope that it will be useful,
+//  but WITHOUT ANY WARRANTY; without even the implied warranty of
+//  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+//  GNU General Public License for more details.
+//
+//  You should have received a copy of the GNU General Public License
+//  along with this program.  If not, see <http://www.gnu.org/licenses/>.
+using System;
+using GREATLib;
+using GREATLib.Entities;
+using GREATLib.Entities.Physics;
+
+namespace Entities.Player.Spells
+{
+	/// <summary>
+	/// Represents a champion's spell.
+	/// Note: this spell does not 
+	/// </summary>
+    public abstract class ISpell : ISynchronizable
+    {
+        public ISpell()
+        {
+        }
+
+		public abstract void Activate(GameMatch match, IEntity target);
+    }
+}
+
