@@ -52,6 +52,7 @@
     <Compile Include="World\Tiles\CollisionType.cs" />
     <Compile Include="Entities\Player\Champions\ChampionTypes.cs" />
     <Compile Include="Entities\Player\Champions\AllChampions\StickmanChampion.cs" />
+    <Compile Include="Entities\Player\Spells\ISpell.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
